apps/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: tautulli
        image: ghcr.io/tautulli/tautulli:v2.15.2
        ports:
        - name: tautulli-port
          containerPort: 8181
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: config
          mountPath: /config
        livenessProbe:
          httpGet:
            path: /
            port: 8181
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8181
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-pvc
