apps/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  selector:
    app: tautulli
  ports:
  - port: 8181
    targetPort: tautulli-port
